apps/teslamate/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teslamate-teslamate
  labels:
    app.kubernetes.io/name: teslamate
    app.kubernetes.io/instance: teslamate
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: teslamate
      app.kubernetes.io/instance: teslamate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teslamate
        app.kubernetes.io/instance: teslamate
    spec:
      containers:
        - name: teslamate
          image: teslamate/teslamate:3.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: import-volume
              mountPath: /opt/app/import
      volumes:
        - name: import-volume
          persistentVolumeClaim:
            claimName: teslamate-teslamate-import-pvc
