apps/teslamate/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate-teslamate
  labels:
    app.kubernetes.io/name: teslamate
    app.kubernetes.io/instance: teslamate
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app.kubernetes.io/name: teslamate
    app.kubernetes.io/instance: teslamate
